[metadata]
name = hdlparse
author = Kevin Thibedeau
author_email = kevin.thibedeau@gmail.com
url = http://kevinpt.github.io/hdlparse
download_url = http://kevinpt.github.io/hdlparse
description = HDL parser
long_description = file: README.rst
description_file = README.rst
version = attr: hdlparse.__version__
license = MIT
keywords = HDL parser
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Text Processing :: General
    Natural Language :: English
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = hdlparse
py_modules =
install_requires =
include_package_data = True


[pycodestyle]
max_line_length = 120
ignore = E501